[package]
name = "ravendb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
tokio = { version = "1.18.2", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
tokio-test = { version = "0.4" }
