[package]
name = "ravendb-client"
version = "0.1.0"
edition = "2021"

[[example]]
name = "demo"

[dependencies]
anyhow = "1.0.65"
dyn-clone = "1.0.9"
reqwest = { version = "0.11.11", features = ["rustls-tls"] }
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
tokio-test = { version = "0.4" }
