[package]
name = "ravendb_client"
version = "0.1.0"
edition = "2021"

[[example]]
name = "demo"

[[example]]
name = "sandbox"

[dependencies]
anyhow = "1.0.65"
dyn-clone = "1.0.9"
reqwest = { version = "0.11.11", features = ["rustls-tls"] }
thiserror = "1.0.35"
tracing = { version = "0.1.36", features = ["log"] }
tokio = { version = "1.21.1", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
rand = "0.8.5"
tracing-tree = "0.2.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[dev-dependencies]
tokio-test = { version = "0.4" }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
