[package]
name = "ravendb_client"
version = "0.1.0"
edition = "2021"

[[example]]
name = "demo"

[[example]]
name = "sandbox"

[dependencies]
anyhow = "1.0.65"
dyn-clone = "1.0.9"
reqwest = { version = "0.11.12", features = ["rustls-tls","json"] }
thiserror = "1.0.37"
tracing = { version = "0.1.36", features = ["log"] }
tokio = { version = "1.21.1", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
wiremock = "0.5.14"

[dev-dependencies]
#tracing-tree = "0.2.1"
tokio-test = { version = "0.4.2" }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
